# data-science-football-project

./: .gitignore  README.md  pyproject.toml
data_science_football_project/datasources/: load_dataframe.py
data_science_football_project/notebooks/: football_Project.ipynb
