[tool.poetry]
name = "data-science-football-project"
version = "0.1.0"
description = ""
authors = ["Sergio Duarte <holasoysergio.805@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.23.5,<2.0.0"
pandas = "^2.2.2"
pandera = "^0.20.1"
pydantic = "^2.8.2"
tzdata = "^2024.1"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
jupyterlab = "^4.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"
pytest = "^8.2.2"
click = "^8.1.7"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
